--- a/TrioTakedown.uproject
+++ b/TrioTakedown.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{BEE49CCA-4EE5-150C-AF8C-00A8F8CC1C6F}",
+	"EngineAssociation": "5.2",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
